src/objects/Consumer_Search_Web_Service__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Consumer_Search_Token_Header__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Consumer Search Token Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Search_Web_Service__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Consumer Search Web Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timeout_milliseconds__c</fullName>
        <description>The amount of time Salesforce will wait for the Consumer Experience API to respond to an HTTP request.</description>
        <inlineHelpText>Valid range: 1 - 120000. The system will interpret all other values as 10000.</inlineHelpText>
        <label>Timeout (milliseconds)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Consumer Search Web Service</label>
</CustomObject>